Fix heading sizes on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,3 +56,15 @@ h2 {
 h3 {
   font-size: 1.5rem;
 }
+
+@include media($mobile) {
+  h1 {
+    font-size: 2.2rem;
+  }
+  h2 {
+    font-size: 1.7rem;
+  }
+  h3 {
+    font-size: 1.2rem;
+  }
+}
